# bazel_plugin_starter

./: BUILD  MODULE.bazel  WORKSPACE  bazel-bazel_plugin_starter  bazel-bin  bazel-java-tutorial  bazel-out  bazel-testlogs
src/main/java/com/example/: GreeterTest.java  Greeting.kt  ProjectRunner.java
src/main/java/com/example/cmdline/: BUILD  Runner.java
